# bulk

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
include/: bathCommandProcessor.h  command.h  commandProcessor.h  consoleInput.h  consoleOutput.h  observe.h  reportWriter.h
src/: main.cpp
